--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" type="text/css" rel="stylesheet">
     <script src="./main.js" type="text/javascript" async></script>
-    <title>VKU digital map Program</title>
+    <title>Virtual VKU</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="">home</a>
+                            <a href="#">home</a>
                         </li>
                         <li class="top-menu-item">
                             <a href="">digital map</a>
@@ -56,7 +56,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
                                   </svg>
-                                <span class="tqd-badge-circle bg-lime-500 text-white">1</span>
+                                <span class="ndn-badge-circle bg-lime-500 text-white">1</span>
                             </a>
                         </li>
                     </ul>
@@ -101,7 +101,7 @@
                             allowfullscreen></iframe>
                     </div>
                     <div class="basis-1/2 w-full h-full flex flex-col justify-center items-center lg:text-left text-center">
-                        <div class="w-full text-3xl mb-6 leading-10 font-normal lg:mt-0 mt-7">VietNam Korean University
+                        <div class="w-full text-3xl mb-6 leading-10 font-normal lg:mt-0 mt-7">Vietnam Korea University of information and communication technology
                         </div>
                         <div class="text-base mb-6 text-gray-450 opacity-50 leading-7">
                             As an institution of training, scientific research, technology transfer, innovation, entrepreneurship, serving the large and prestigious community of the whole country in the fields of information technology, communication and other fields. related to
@@ -260,11 +260,11 @@
                                 Nguyễn Văn Thành Vinh (Leader)
                             </div>
                             <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman
+                                21GIT student, freshman of VKU
                             </div>
-                            <div class="flex flex-row gap-1 justify-center items-center">
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <a href="https://www.facebook.com/profile.php?id=100006491119621" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="mailto:vinhnvt.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
                             </div>
                         </div>
 
@@ -276,11 +276,11 @@
                                 Nguyễn Đăng Nhã
                             </div>
                             <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman
+                                21GIT student, freshman of VKU
                             </div>
-                            <div class="flex flex-row gap-1 justify-center items-center">
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <a href="https://www.facebook.com/hantu1606/" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="mailto:nhand.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
                             </div>
                         </div>
 
@@ -292,11 +292,11 @@
                                 Phạm Quang Trung
                             </div>
                             <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman
+                                21GIT student, freshman of VKU
                             </div>
-                            <div class="flex flex-row gap-1 justify-center items-center">
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <a href="https://www.facebook.com/gam.pqt.68" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="mailto:trungpq.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
                             </div>
                         </div>
 
@@ -318,60 +318,56 @@
 
             <div class="footer w-full h-[350px] bg-white">
                 <div class="flex md:flex-row flex-col lg:gap-28 gap-8 xl:w-[65%] w-90% mx-auto">
-                    <div class="basis-1/3 flex flex-col">
-                        <div class="text-xl mb-4 font-bold text-center lg:text-left">CoffeeStyle.</div>
-                        <div class="text-sm mb-12 text-gray-500 opacity-90 text-center lg:text-left">Delivering the best coffee life since 1996. From coffee geeks to the real ones.</div>
-                        <div class="text-sm text-center lg:text-left mb-4 text-gray-500 opacity-90 leading-7 hover:text-coffee-400">CoffeeStyle Inc. © 1996</div>
+                    <div class="basis-5/7 flex flex-col">
+                        <div class="text-xl mb-4 font-bold text-center lg:text-left">Vietnam Korea University of information and communication technology</div>
+                        <div class="text-sm mb-12 text-gray-500 opacity-90 text-center lg:text-left">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                              </svg> 470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</div>
+                        <div class="text-sm text-center lg:text-left mb-4 text-gray-500 opacity-90 leading-7 hover:text-lime-400">University in Vietnam</div>
                     </div>
-                    <div class="bais-1/6">
+                    <div class="basis-1/7">
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
                                 <a href="">Home</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Products</a>
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
+                                <a href="">Digital Map</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Blog</a>
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
+                                <a href="">Club&Groups</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">About</a>
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
+                                <a href="">Contests</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
                                 <a href="">Contract</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Styleguide</a>
-                            </li>
                         </ul>
                     </div>
-                    <div class="basis-1/6 text-sm text-gray-400">
-                        <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">FOLLOW US</div>
+                    <div class="basis-1/7 text-sm text-gray-400">
+                        <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-2">units</div>
                         <ul class="flex flex-col">
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Facebook</a>
+                            <li class="max-h-[150px] max-w-[150px]">
+                                <a href="https://vku.udn.vn/" target="blank"><img src="./img/logo-tab.jpg" alt=""></a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Instagram</a>
+                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
+                                <a href="#">logo of my website</a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Pinterest</a>
-                            </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">
-                                <a href="">Twitter</a>
-                            </li>
+
                         </ul>
                     </div>
-                    <div class="basis-1/3">
+                    <div class="basis-1/7">
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">
                             CONTACT US
                         </div>
-                        <div class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400 mb-4">We’re Always Happy to Help</div>
-                        <div class="text-xl text-center lg:text-left text-black leading-7 hover:text-coffee-400 mb-16">
-                            <a href="">us@coffeestyle.io</a>
+                        <div class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400 mb-4">We’re Always Happy to Help</div>
+                        <div class="text-xl text-center lg:text-left text-black leading-7 hover:text-lime-400 mb-16">
+                            <a href="">nhand.21it@vku.udn.vn</a>
                         </div>
-                        <div class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-coffee-400">Powered by Webflow</div>
+                        <div class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">Powered by Pencil group</div>
                     </div>
                 </div>
             </div>
