--- a/public/group/index.html
+++ b/public/group/index.html
@@ -4,12 +4,12 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link rel="icon" type="image/x-icon" href="./img/logo-tab.jpg">
+    <link rel="icon" type="image/x-icon" href="../img/logo-tab.jpg">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./output.css" type="text/css" rel="stylesheet">
-    <script src="./main.js" type="text/javascript" async></script>
+    <link href="../output.css" type="text/css" rel="stylesheet">
+    <script src="../main.js" type="text/javascript" async></script>
     <title>Virtual VKU</title>
 </head>
 
@@ -32,16 +32,16 @@
                             <a href="#">home</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="https://dangnha.github.io/VKU-virtual/public/mapdigital/">digital map</a>
+                            <a href="">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="https://dangnha.github.io/VKU-virtual/public/group">club&groups</a>
+                            <a href="">club&groups</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="https://dangnha.github.io/VKU-virtual/public/contests">contests</a>
+                            <a href="">contests</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="https://dangnha.github.io/VKU-virtual/public/contact">contact</a>
+                            <a href="">contract</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -73,49 +73,7 @@
 
             <!-- Body page -->
             <div id="body-page" class="mt-[84px]  mb-[120px]">
-                <!-- Slide -->
-                <div class="slide h-[530px] bg-[url(./img/map-slider.jpg)] bg-cover bg-no-repeat bg-center">
-                    <div class="w-full h-full flex justify-center items-center bg-gray-900 bg-opacity-50">
-                        <div class="text-lime-200 text-center">
-                            <div class="tracking-widest uppercase text-2xl opacity-80">A digital map of</div>
-                            <div class="text-5xl my-3 ">VietNam Korean University</div>
 
-                            <a href="https://dangnha.github.io/VKU-virtual/public/mapdigital">
-                                <button class="tracking-widest uppercase text-xl bg-white text-lime-700 outline-none px-6 py-[18px] font-bold hover:bg-slate-200">
-                                visit now
-                            </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- break page -->
-                <div class="page-break">
-                    <div class="page-break__line"></div>
-                    <div class="page-break__content">Introduce Our university</div>
-                    <div class="page-break__line"></div>
-                </div>
-
-                <!-- content -->
-                <div class="content-video flex lg:flex-row flex-col justify-center mx-auto items-center gap-10 xl:w-[65%] w-[90%]">
-                    <div class="basis-1/2">
-                        <iframe class="w-full h-full object-cover lg:min-h-[350px] min-h-[450px] lg:min-w-0 min-w-[375px]" src="https://www.youtube.com/embed/oT47WpwVFOc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="basis-1/2 w-full h-full flex flex-col justify-center items-center lg:text-left text-center">
-                        <div class="w-full text-3xl mb-6 leading-10 font-normal lg:mt-0 mt-7">Vietnam Korea University of information and communication technology
-                        </div>
-                        <div class="text-base mb-6 text-gray-450 opacity-50 leading-7">
-                            As an institution of training, scientific research, technology transfer, innovation, entrepreneurship, serving the large and prestigious community of the whole country in the fields of information technology, communication and other fields. related to
-                            the application-oriented university model; Smart, modern school with advanced management methods to provide high-quality human resources, well meet labor needs in the period of international integration and industrial revolution
-                            4.0.
-                        </div>
-                        <!-- <div class="relative">
-                            <a class="font-light text-base text-coffee-400 hover:text-coffee-600 after:absolute after:bottom-0 after:left-0 after:bg-coffee-100 after:h-0.5 after:w-full hover:after:bg-coffee-200
-                             after:duration-400 after:transition-all after:ease-in-out" href="">Read the full Story</a>
-                        </div> -->
-                    </div>
-                </div>
 
                 <!-- break page -->
                 <div class="page-break">
@@ -187,123 +145,9 @@
 
                         </div>
                     </div>
-                    <div class="w-full max-h-[60px] flex justify-center mt-6">
-                        <a href="https://dangnha.github.io/VKU-virtual/public/group" class="mx-auto">
-                            <button class="ndn-button cursor-pointer flex flex-row justify-center items-center hover:text-lime-500 hover:bg-slate-100">
-                            <span>View more </span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                              </svg>
-                        </button>
-                        </a>
-                    </div>
+
                 </div>
 
-                <!-- break page -->
-                <div class="page-break">
-                    <div class="page-break__line"></div>
-                    <div class="page-break__content">Competitions in vku</div>
-                    <div class="page-break__line"></div>
-                </div>
-
-                <!-- Contests -->
-                <div class="competitions w-[90%] xl:w-[65%] mx-auto mb-2 lg:mb-24 grid lg:grid-cols-2 grid-row-2 gap-12">
-                    <div class="basis-1/2 flex flex-col gap-6 justify-center lg:text-left text-center ">
-                        <div class="text-2xl">
-                            Outstanding contests for students of VKU
-                        </div>
-                        <div class="text-lg">
-                            At Vietnam - Korea University, in addition to an intensive training program in information technology, students also participate in many large playgrounds, through which students can both experience and learn at the same time. to improve their professional
-                            skills & soft skills.
-                        </div>
-                        <div class="text-sm">
-                            If you want to learn more about contests, let's click this button.
-                        </div>
-                        <div class="w-full min-h-[60px] flex lg:justify-start justify-center">
-                            <a href="https://dangnha.github.io/VKU-virtual/public/contests" class="">
-                                <button class="ndn-button cursor-pointer flex flex-row justify-center items-center hover:text-lime-500 hover:bg-slate-100">
-                                <span>View more </span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                                  </svg>
-                            </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="basis 1/2 grid lg:grid-row-2 md:grid-col-3 gap-5 lg:col-start-2 row-start-1">
-                        <div class="h-[205px] rounded-xl bg-[url(./img/comp-bwd.jpg)] bg-cover bg-no-repeat bg-center">
-
-                        </div>
-                        <div class="grid grid-cols-2 gap-5">
-                            <div class="hidden md:block h-[205px] rounded-xl bg-[url(./img/comp-rbc.jpg)] bg-cover bg-no-repeat bg-center"></div>
-                            <div class="hidden md:block h-[205px] rounded-xl bg-[url(./img/comp-pisi.jpg)] bg-cover bg-no-repeat bg-center"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- break page -->
-                <div class="page-break">
-                    <div class="page-break__line"></div>
-                    <div class="page-break__content">members of our team</div>
-                    <div class="page-break__line"></div>
-                </div>
-
-                <!-- members -->
-
-                <div class="flex flex-col justify-center items-center shadow-xl mb-10">
-                    <div class="uppercase text-3xl font-bold mb-14">members</div>
-
-                    <div class="flex flex-col md:flex-row gap-7 xl:w-[65%] w-[90%] md:h-[500px]">
-                        <div class="w-full h-[400px] shadow-2xl">
-                            <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/logo-hih.jpg)] bg-cover bg-no-repeat bg-center mb-6">
-
-                            </div>
-                            <div class="text-base font-extrabold mb-6 text-center">
-                                Nguyễn Văn Thành Vinh (Leader)
-                            </div>
-                            <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman of VKU
-                            </div>
-                            <div class="flex flex-row gap-2 justify-center items-center">
-                                <a href="https://www.facebook.com/profile.php?id=100006491119621" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="mailto:vinhnvt.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
-                            </div>
-                        </div>
-
-                        <div class="w-full h-[400px] shadow-2xl">
-                            <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/logo-hih.jpg)] bg-cover bg-no-repeat bg-center mb-6">
-
-                            </div>
-                            <div class="text-base font-extrabold mb-6 text-center">
-                                Nguyễn Đăng Nhã
-                            </div>
-                            <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman of VKU
-                            </div>
-                            <div class="flex flex-row gap-2 justify-center items-center">
-                                <a href="https://www.facebook.com/hantu1606/" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="mailto:nhand.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
-                            </div>
-                        </div>
-
-                        <div class="w-full h-[400px] shadow-2xl">
-                            <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/logo-hih.jpg)] bg-cover bg-no-repeat bg-center mb-6">
-
-                            </div>
-                            <div class="text-base font-extrabold mb-6 text-center">
-                                Phạm Quang Trung
-                            </div>
-                            <div class="text-sm mb-3 text-center">
-                                21GIT student, freshman of VKU
-                            </div>
-                            <div class="flex flex-row gap-2 justify-center items-center">
-                                <a href="https://www.facebook.com/gam.pqt.68" target="blank" class="cursor-pointer"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="mailto:trungpq.21it@vku.udn.vn" target="blank" class="cursor-pointer"><i class="fa-solid fa-envelope"></i></a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
 
                 <!-- background const -->
                 <div class="parallax-bg h-[400px] mb-24 bg-fixed bg-[url(./img/overview.jpg)] bg-cover bg-no-repeat bg-center w-[100vw] relative left-[calc(-50vw_+_50%)]">
@@ -333,19 +177,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="#">Home</a>
+                                <a href="">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="https://dangnha.github.io/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="https://dangnha.github.io/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="https://dangnha.github.io/VKU-virtual/public/contests">Contests</a>
+                                <a href="">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="#/contact/">Contact</a>
+                                <a href="">Contract</a>
                             </li>
                         </ul>
                     </div>
@@ -353,7 +197,7 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-2">units</div>
                         <ul class="flex flex-col">
                             <li class="max-h-[150px] max-w-[150px]">
-                                <a href="https://vku.udn.vn/" target="blank"><img src="./img/logo-tab.jpg" alt=""></a>
+                                <a href="https://vku.udn.vn/" target="blank"><img src="../img/logo-tab.jpg" alt=""></a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
                                 <a href="#">logo of my website</a>
