--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -21,8 +21,14 @@
             <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
                 <div class="nav flex flex-row justify-between items-center relative">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-
-                        <a href="/VKU-virtual/public/">VKU virtual</a>
+                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                            <div class="font-semibold text-lime-500">Virtual</div>
+                            <div class="flex flex-row">
+                                <div class="uppercase font-black text-yellow-600">v</div>
+                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-blue-600">u</div>
+                            </div>
+                        </a>
                     </div>
 
                     <!-- navigations -->
@@ -81,10 +87,9 @@
                     <div class="basis-5/7 flex flex-col">
                         <div class="text-xl mb-4 font-bold text-center lg:text-left">Vietnam Korea University of information and communication technology</div>
                         <div class="text-sm mb-12 text-gray-500 opacity-90 text-center lg:text-left">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-                              </svg> 470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</div>
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span class="pl-1">470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</span>
+                        </div>
                         <div class="text-sm text-center lg:text-left mb-4 text-gray-500 opacity-90 leading-7 hover:text-lime-400">University in Vietnam</div>
                     </div>
                     <div class="basis-1/7">
@@ -109,12 +114,21 @@
                     </div>
                     <div class="basis-1/7 text-sm text-gray-400">
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-2">units</div>
-                        <ul class="flex flex-col">
+                        <ul class="flex flex-col justify-center items-center">
                             <li class="max-h-[150px] max-w-[150px]">
                                 <a href="https://vku.udn.vn/" target="blank"><img src="../img/logo-tab.jpg" alt=""></a>
                             </li>
-                            <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="#">logo of my website</a>
+                            <li class="">
+                                <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
+                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                        <div class="font-semibold text-lime-500">Virtual</div>
+                                        <div class="flex flex-row">
+                                            <div class="uppercase font-black text-yellow-600">v</div>
+                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-blue-600">u</div>
+                                        </div>
+                                    </a>
+                                </div>
                             </li>
 
                         </ul>
