--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -21,11 +21,11 @@
             <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
                 <div class="nav flex flex-row justify-between items-center relative">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                        <a class="flex flex-col justify-center items-center" href="/">
                             <div class="font-semibold text-lime-500">Virtual</div>
                             <div class="flex flex-row">
-                                <div class="uppercase font-black text-yellow-600">v</div>
-                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-red-600">v</div>
+                                <div class="uppercase font-black text-yellow-400">k</div>
                                 <div class="uppercase font-black text-blue-600">u</div>
                             </div>
                         </a>
@@ -35,19 +35,19 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/">home</a>
+                            <a href="/">home</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/mapdigital">digital map</a>
+                            <a href="/mapdigital">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/group">club&groups</a>
+                            <a href="/group">club&groups</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contests">contests</a>
+                            <a href="/contests">contests</a>
                         </li>
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="/VKU-virtual/public/contract">contract</a>
+                            <a href="/contract">contract</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -78,8 +78,45 @@
             </div>
 
             <!-- Body page -->
-            <div class="mt-[84px]  mb-[120px] h-[660px] bg-gray-500"></div>
+            <div class="mt-[120px] xl:w-[70%] w-[90%] mx-auto mb-[120px] bg-lime-200 lg:h-auto h-[12 00px] z-0 flex flex-col justify-center gap-10">
+                <div class="basis-1/6 grid lg:grid-cols-3 grid-cols-1 gap-7 h-[150px] w-[65%] mx-auto mt-8">
+                    <div class="flex text-white text-center shadow-xl flex-row gap-5 justify-center items-center rounded-2xl bg-lime-600 ">
+                        <i class="fa-solid fa-map-location-dot ml-5"></i>
+                        <div class="text-sm min-h-[80px] min-w-[80px] flex items-center mr-5">470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</div>
+                    </div>
+                    <div class="flex text-white text-center shadow-xl flex-row gap-5 justify-center items-center rounded-2xl bg-lime-600 ">
+                        <i class="fa-solid fa-phone"></i>
+                        <div class="text-sm min-h-[80px] min-w-[80px] text-white text-center flex items-center">
+                            <span>0583654158</span>
+                        </div>
+                    </div>
+                    <div class="flex text-white text-center shadow-xl flex-row gap-2 justify-center items-center rounded-2xl bg-lime-600 ">
+                        <i class="fa-solid fa-envelope ml-5"></i>
+                        <div class="text-sm min-h-[80px] min-w-[80px] flex gap-1 items-center text-white text-center">
+                            trungpq.21it@vku.udn.vn
+                        </div>
+                    </div>
+                </div>
 
+                <div class="basis-4/6 w-[65%] mx-auto bg-lime-600 shadow-xl rounded-2xl h-[500px] lg:h-auto">
+                    <div class="flex lg:flex-row flex-col justify-center items-center gap-9 my-6 mx-8">
+                        <div class="flex flex-col gap-8 justify-center items-center">
+                            <div class="text-4xl text-white uppercase">Contact Form</div>
+
+                            <div><input class="text-lg tracking-wider font-medium text-gray-600" type="text" placeholder="Name"></div>
+                            <div><input class="text-lg tracking-wider font-medium text-gray-600" type="email" placeholder="Email"></div>
+                            <div><input class="text-lg tracking-wider font-medium text-gray-600" type="phone" placeholder="Phone number"></div>
+                        </div>
+                        <div><textarea class="" name="" id="" cols="25" rows="10" placeholder="Message"></textarea></div>
+                    </div>
+                </div>
+
+
+                <a href="#" class="flex justify-center mb-8">
+                    <button class="uppercase text-white hover:bg-slate-300 hover:text-gray-500 text-2xl py-3 px-5 bg-lime-600 min-w-[200px]">send</button>
+                </a>
+
+            </div>
             <!-- footer -->
 
             <div class="footer w-full h-[350px] bg-white">
@@ -96,19 +133,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="/mapdigital">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="/group">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contests">Contests</a>
+                                <a href="/contests">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contact/">Contact</a>
+                                <a href="/contact/">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -120,11 +157,11 @@
                             </li>
                             <li class="">
                                 <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
-                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                    <a class="flex flex-col justify-center items-center" href="/">
                                         <div class="font-semibold text-lime-500">Virtual</div>
                                         <div class="flex flex-row">
-                                            <div class="uppercase font-black text-yellow-600">v</div>
-                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-red-600">v</div>
+                                            <div class="uppercase font-black text-yellow-400">k</div>
                                             <div class="uppercase font-black text-blue-600">u</div>
                                         </div>
                                     </a>
