--- a/public/contests/index.html
+++ b/public/contests/index.html
@@ -21,11 +21,11 @@
             <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
                 <div class="nav flex flex-row justify-between items-center relative">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                        <a class="flex flex-col justify-center items-center" href="/">
                             <div class="font-semibold text-lime-500">Virtual</div>
                             <div class="flex flex-row">
-                                <div class="uppercase font-black text-yellow-600">v</div>
-                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-red-600">v</div>
+                                <div class="uppercase font-black text-yellow-400">k</div>
                                 <div class="uppercase font-black text-blue-600">u</div>
                             </div>
                         </a>
@@ -35,19 +35,19 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/">home</a>
+                            <a href="/">home</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/mapdigital">digital map</a>
+                            <a href="/mapdigital">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/group">club&groups</a>
+                            <a href="/group">club&groups</a>
                         </li>
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="/VKU-virtual/public/contests">contests</a>
+                            <a href="/contests">contests</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contact">contact</a>
+                            <a href="/contact">contact</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -76,46 +76,96 @@
 
                 </div>
             </div>
+            <div class="container mt-[120px] w-[90%] xl:w-[65%] mx-auto">
+                <div class="page-break">
+                    <div class="page-break__line"></div>
+                    <div class="page-break__content">Competitions in vku</div>
+                    <div class="page-break__line"></div>
+                </div>
 
-            <div class="page-break">
-                <div class="page-break__line"></div>
-                <div class="page-break__content">Competitions in vku</div>
-                <div class="page-break__line"></div>
+                <!-- Contests -->
+                <div class="competitions w-full h-full lg:mb-24 lg:h-[1500px]">
+                    <div class="grid lg:grid-cols-2 grid-cols-1 gap-9 h-full w-full">
+                        <div class="contest flex flex-col gap-7">
+                            <div class="text-center">
+                                <div class="uppercase text-3xl font-semibold mb-4">best web design 2022</div>
+                                <div>Best Web Design 2022 không chỉ mang đến sân chơi mới cho các bạn sinh viên K21 mà còn mang đến một sân đấu dành riêng cho các “Dân chơi lão làng” có thể “cọ sát” với nhau mạnh hơn.</div>
+                                <div class=" text-xl font-medium">Hạng mục 1: Cuộc thi BWD 2022</div>
+                                <div>Thành phần tham gia: Tất cả sinh viên VKU đang học môn học Thiết kế web hoặc Công nghệ web trong học kỳ 2, năm học 2021-2022 và sinh viên năm thứ nhất của Trường VKU và các trường khác ở Khu vực Miền trung – Tây Nguyên
+                                    và cả nước.</div>
+                                <div class=" text-xl font-medium">Hạng mục 2: Cuộc thi Super BWD 2022</div>
+                                <div>Thành phần tham gia: Tất cả sinh viên đã đạt giải ở các năm trước và sinh viên năm thứ hai trở lên của Trường VKU và các trường khác ở Khu vực Miền trung – Tây Nguyên và cả nước.</div>
+                            </div>
+
+                            <div>
+                                <iframe class="w-full h-full object-cover lg:min-h-[350px] min-h-[450px] lg:min-w-0 min-w-[335px]" width="560" height="315" src="https://www.youtube.com/embed/M2vgAYvmF8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                        </div>
+
+                        <div class="contest flex flex-col lg:gap-[165px] gap-7">
+                            <div class="text-center">
+                                <div class="uppercase text-3xl font-semibold mb-4">cuộc thi sáng tạo robocar 2022</div>
+                                <div class=" text-xl font-medium">Đối tượng tham gia:</div>
+                                <div>Thành phần bắt buộc: Toàn bộ sinh viên trường Đại học Công nghệ Thông tin và Truyền thông Việt – Hàn có đăng ký học phần Vi điều khiển học kỳ 2- năm học 2021-2022.</div>
+                                <div>Toàn thể sinh viên trường Đại học Công nghệ Thông tin và Truyền thông Việt – Hàn và các trường đại học thành viên thuộc Đại học Đà Nẵng.</div>
+                                <div>Toàn thể học sinh trung học phổ thông đam mê Robocar</div>
+                            </div>
+
+                            <div>
+                                <iframe class="w-full h-full object-cover lg:min-h-[350px] min-h-[450px] lg:min-w-0 min-w-[335px]" width="560" height="315" src="https://www.youtube.com/embed/c4qzx7MsZsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                        </div>
+
+                        <div class="contest flex flex-col gap-7">
+                            <div class="text-center ">
+                                <div class="uppercase text-3xl font-semibold mb-4">english talent Competition - ETC 2021</div>
+                                <div>Best Web Design 2022 không chỉ mang đến sân chơi mới cho các bạn sinh viên K21 mà còn mang đến một sân đấu dành riêng cho các “Dân chơi lão làng” có thể “cọ sát” với nhau mạnh hơn.</div>
+                                <div class=" text-xl font-medium">ĐỐI TƯỢNG THAM GIA: </div>
+                                <div>Sinh viên tất cả các khoá của Trường ĐH Công nghệ Thông tin và Truyền thông Việt – Hàn, bắt buộc đối với sinh viên K20, khuyến khích sinh viên K19</div>
+                                <div>Tất cả sinh viên Đại học Đà Nẵng</div>
+                                <div>Các sinh viên thi theo hình thức nhóm (3 sinh viên); khuyến khích mỗi nhóm gồm 02 sinh viên Công nghệ thông tin hoặc Công nghệ kỹ thuật máy tính và 01 sinh viên Quản trị kinh doanh. </div>
+                            </div>
+
+                            <div class="">
+                                <iframe class="w-full h-full object-cover lg:min-h-[350px] min-h-[450px] lg:min-w-0 min-w-[335px]" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fvku.udn.vn%2Fvideos%2F920132715203868%2F&show_text=false&width=560&t=0"
+                                    width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                            </div>
+
+                        </div>
+
+                        <div class="contest flex flex-col lg:gap-[90px] gap-7">
+                            <div class="text-center">
+                                <div class="uppercase text-3xl font-semibold mb-4">Incubation of innovation and start-up ideas 2022</div>
+                                <div>PISIlà chương trình hỗ trợ và tài trợ để triển khai các ý tưởng sáng tạo và khởi nghiệp dành cho học sinh, sinh viên khu vực Miền Trung – Tây Nguyên. </div>
+                                <div class=" text-xl font-medium">Chương trình PISI 2022 chính thức khởi động với nhiều hoạt động hấp dẫn đang chờ đón các bạn học sinh, sinh viên:</div>
+                                <div>Các vòng thi: Sơ loại, bán kết, chung kết</div>
+                                <div>Đào tạo các kiến thức, kỹ năng cần thiết để xây dựng dự án khởi nghiệp</div>
+                                <div>Hỗ trợ để thực hiện sản phẩm mẫu</div>
+                            </div>
+
+                            <div>
+                                <iframe class="w-full h-full object-cover lg:min-h-[350px] min-h-[450px] lg:min-w-0 min-w-[335px]" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fpisi.vku%2Fvideos%2F554592705870501%2F&show_text=false&width=560&t=0"
+                                    width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+
             </div>
 
-            <!-- Contests -->
-            <div class="competitions w-[90%] xl:w-[65%] mx-auto mb-2 lg:mb-24 grid lg:grid-cols-2 grid-row-2 gap-12">
-                <div class="basis-1/2 flex flex-col gap-6 justify-center lg:text-left text-center ">
-                    <div class="text-2xl">
-                        Outstanding contests for students of VKU
-                    </div>
-                    <div class="text-lg">
-                        At Vietnam - Korea University, in addition to an intensive training program in information technology, students also participate in many large playgrounds, through which students can both experience and learn at the same time. to improve their professional
-                        skills & soft skills.
-                    </div>
-                    <div class="text-sm">
-                        If you want to learn more about contests, let's click this button.
-                    </div>
-                    <div class="w-full min-h-[60px] flex lg:justify-start justify-center">
-                        <a href="" class="">
-                            <button class="ndn-button cursor-pointer flex flex-row justify-center items-center hover:text-lime-500 hover:bg-slate-100">
-                            <span>View more </span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                              </svg>
-                        </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="basis 1/2 grid lg:grid-row-2 md:grid-col-3 gap-5 lg:col-start-2 row-start-1">
-                    <div class="h-[205px] rounded-xl bg-[url(./img/comp-bwd.jpg)] bg-cover bg-no-repeat bg-center">
+            <!-- img const -->
+            <div class="parallax-bg h-[400px] mb-24 bg-fixed bg-[url(./img/overview.jpg)] bg-cover bg-no-repeat bg-center w-[100vw] relative left-[calc(-50vw_+_50%)]">
 
-                    </div>
-                    <div class="grid grid-cols-2 gap-5">
-                        <div class="hidden md:block h-[205px] rounded-xl bg-[url(./img/comp-rbc.jpg)] bg-cover bg-no-repeat bg-center"></div>
-                        <div class="hidden md:block h-[205px] rounded-xl bg-[url(./img/comp-pisi.jpg)] bg-cover bg-no-repeat bg-center"></div>
-                    </div>
-                </div>
             </div>
 
             <!-- footer -->
@@ -134,19 +184,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="/mapdigital">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="/group">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contests">Contests</a>
+                                <a href="/contests">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contact/">Contact</a>
+                                <a href="/contact/">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -158,11 +208,11 @@
                             </li>
                             <li class="">
                                 <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
-                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                    <a class="flex flex-col justify-center items-center" href="/">
                                         <div class="font-semibold text-lime-500">Virtual</div>
                                         <div class="flex flex-row">
-                                            <div class="uppercase font-black text-yellow-600">v</div>
-                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-red-600">v</div>
+                                            <div class="uppercase font-black text-yellow-400">k</div>
                                             <div class="uppercase font-black text-blue-600">u</div>
                                         </div>
                                     </a>
@@ -187,6 +237,8 @@
 
         </div>
     </div>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
