--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -18,14 +18,14 @@
         <div class="root font-Karla max-w-screen-2xl text-base mx-auto md:px-8 bg-white font-medium">
 
             <!-- Header -->
-            <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
-                <div class="nav flex flex-row justify-between items-center relative">
+            <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50 shadow-xl">
+                <div class="nav flex flex-row justify-between items-center relative ">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                        <a class="flex flex-col justify-center items-center" href="/">
                             <div class="font-semibold text-lime-500">Virtual</div>
                             <div class="flex flex-row">
-                                <div class="uppercase font-black text-yellow-600">v</div>
-                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-red-600">v</div>
+                                <div class="uppercase font-black text-yellow-400">k</div>
                                 <div class="uppercase font-black text-blue-600">u</div>
                             </div>
                         </a>
@@ -35,19 +35,19 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/">home</a>
+                            <a href="/">home</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/mapdigital">digital map</a>
+                            <a href="/mapdigital">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/group">club&groups</a>
+                            <a href="/group">club&groups</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contests">contests</a>
+                            <a href="/contests">contests</a>
                         </li>
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="/VKU-virtual/public/contract">contract</a>
+                            <a href="/contact">contact</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -78,7 +78,51 @@
             </div>
 
             <!-- Body page -->
-            <div class="mt-[84px]  mb-[120px] h-[660px] bg-gray-500"></div>
+
+            <div class="container mt-[140px] xl:w-[70%] w-[90%] mx-auto mb-[120px]lg:h-auto h-[12 00px] z-0 shadow-lg">
+                <div class=" justify-center pb-6 pt-6 mb-12">
+                    <div class=" flex md:flex-row flex-col w-[95%] mx-auto">
+                        <div class="basis-1/3 p-8 bg-lime-300">
+                            <h3 class="uppercase text-2xl font-extrabold pb-5">Pencil group</h3>
+                            <ul class="grid grid-cols-1 gap-2">
+                                <li><i class="fa fa-road"></i> 470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</li>
+                                <li><i class="fa fa-phone"></i> 0813727022</li>
+                                <li><i class="fa fa-envelope"></i> nhand.21it@vku.udn.vn</li>
+                            </ul>
+                        </div>
+                        <div class=" basis-2/3 bg-[#f9feff] p-8">
+                            <h3 class="font-extrabold mt-4 mb-4">Email Us</h3>
+                            <!-- <div class="alert">Your message has been sent</div> -->
+                            <form class="flex flex-col gap-4">
+                                <p class="basis-2/15 flex flex-col max-h-20">
+                                    <label class="basis-1/4">Name</label>
+                                    <input class="basis-3/4 leading-6 p-4 border-[1px] solid border-[#84cc16]" type="text" name="name" id="name" required>
+                                </p>
+                                <p class="basis-2/15 flex flex-col max-h-20">
+                                    <label class="basis-1/4">Company</label>
+                                    <input class="basis-3/4 leading-6 p-4 border-[1px] solid border-[#84cc16]" type="text" name="company" id="company">
+                                </p>
+                                <p class="basis-2/15 flex flex-col max-h-20">
+                                    <label class="basis-1/4">Email Address</label>
+                                    <input class="basis-3/4 leading-6 p-4 border-[1px] solid border-[#84cc16]" type="email" name="email" id="email" required>
+                                </p>
+                                <p class="basis-2/15 flex flex-col max-h-20">
+                                    <label class="basis-1/4">Phone Number</label>
+                                    <input class="basis-3/4 leading-6 p-4 border-[1px] solid border-[#84cc16]" type="text" name="phone" id="phone">
+                                </p>
+                                <p class="basis-5/15 flex flex-col">
+                                    <label class="basis-1/4">Message</label>
+                                    <textarea class="basis-3/4 leading-6 p-4 border-[1px] solid border-[#84cc16]" name="message" rows="6" id="message"></textarea>
+                                </p>
+                                <p class="basis-2/15 max-h-20 p-6 items-center text-center bg-lime-400 cursor-pointer hover:bg-lime-200 hover:text-black">
+                                    <button class="" type="submit">Submit</button>
+                                </p>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
             <!-- footer -->
 
@@ -96,19 +140,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="/mapdigital">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="/group">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contests">Contests</a>
+                                <a href="/contests">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contact/">Contact</a>
+                                <a href="/contact/">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -120,11 +164,11 @@
                             </li>
                             <li class="">
                                 <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
-                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                    <a class="flex flex-col justify-center items-center" href="/">
                                         <div class="font-semibold text-lime-500">Virtual</div>
                                         <div class="flex flex-row">
-                                            <div class="uppercase font-black text-yellow-600">v</div>
-                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-red-600">v</div>
+                                            <div class="uppercase font-black text-yellow-400">k</div>
                                             <div class="uppercase font-black text-blue-600">u</div>
                                         </div>
                                     </a>
@@ -149,6 +193,7 @@
 
         </div>
     </div>
+
 </body>
 
 </html>
