--- a/public/mapdigital/index.html
+++ b/public/mapdigital/index.html
@@ -26,18 +26,20 @@
 </head>
 
 <body>
+
+
     <div>
         <div class="root font-Karla max-w-screen-2xl text-base mx-auto md:px-8 bg-white font-medium">
 
             <!-- Header -->
-            <div class="header py-3 lg:py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
+            <div class="header py-3 lg:py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50 shadow-xl">
                 <div class="nav flex flex-row justify-between items-center relative">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                        <a class="flex flex-col justify-center items-center" href="/">
                             <div class="font-semibold text-lime-500">Virtual</div>
                             <div class="flex flex-row">
-                                <div class="uppercase font-black text-yellow-600">v</div>
-                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-red-600">v</div>
+                                <div class="uppercase font-black text-yellow-400">k</div>
                                 <div class="uppercase font-black text-blue-600">u</div>
                             </div>
                         </a>
@@ -47,19 +49,19 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/">home</a>
+                            <a href="/">home</a>
                         </li>
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="/VKU-virtual/public/mapdigital/">digital map</a>
+                            <a href="/mapdigital/">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/group">club&groups</a>
+                            <a href="/group">club&groups</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contests/">contests</a>
+                            <a href="/contests/">contests</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contact/">contact</a>
+                            <a href="/contact/">contact</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -90,9 +92,18 @@
             </div>
 
             <!-- Body page -->
-            <div class="mt-[84px] w-full mb-[120px] h-[660px] shadow-xl">
-                <div class="z-20 w-[95%] mx-auto" id="map"></div>
+            <div class="mt-[140px] w-[90%] mx-auto mb-[120px] h-[550px] shadow-xl relative">
+                <div class="map-3d w-[35px] h-[30px] z-30 text-black absolute top-[130px] left-[42px] text-center items-center border-solid border-2 border-gray-400 border-opacity-70 rounded-sm bg-white">
+                    <a href="https://dangnha.github.io/Virtual-vku-map3d/">
+                        <span>3D</span>
+                    </a>
+                </div>
+                <div class="z-20 w-[95%] h-[90%] mx-auto" id="map"></div>
             </div>
+
+            <!-- <div class="mt-[140px] w-[90%] mx-auto mb-[120px] h-[550px] shadow-xl ">
+                <div class="z-30 w-[95%] h-[90%] mx-auto" id="mapp"></div>
+            </div> -->
 
             <!-- footer -->
 
@@ -110,19 +121,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="/mapdigital">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="/group">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contests">Contests</a>
+                                <a href="/contests">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contact/">Contact</a>
+                                <a href="/contact/">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -134,11 +145,11 @@
                             </li>
                             <li class="">
                                 <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
-                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                    <a class="flex flex-col justify-center items-center" href="/">
                                         <div class="font-semibold text-lime-500">Virtual</div>
                                         <div class="flex flex-row">
-                                            <div class="uppercase font-black text-yellow-600">v</div>
-                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-red-600">v</div>
+                                            <div class="uppercase font-black text-yellow-400">k</div>
                                             <div class="uppercase font-black text-blue-600">u</div>
                                         </div>
                                     </a>
@@ -168,6 +179,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js" data-require="leaflet@0.7.3" data-semver="0.7.3"></script>
 <script type="text/javascript" src="../testLayercontrol/script.js"></script>
+<script type="text/javascript" src="../testLayercontrol/map3d.js"></script>
 
 <!-- Searching -->
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
